--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-25-05: JCon: Can save and add new character variables. [Tsusai]
- 10-25-04: JCon: Can view and delete Character variables. [Tsusai]
- 10-25-04: JCon: Restarts WAC if WAC is on to make port change work. [Tsusai]
- 10-25-04: WAC: Fixed account submission %40 instead of @ problem for non-IE browsers. [Tsusai]
- 10-21-04: JCon: Character skill modification save finish. [Tsusai]
- 10-20-04: Free'd a stringlist in script.pas. [Tsusai]
- 10-20-04: JCon: Character skills & level viewable. [Tsusai]
- 10-20-04: Another OnTouch improvement. OnTouch basically complete. [Tsusai]
- 10-19-04: OnTouch FUNCTIONAL. [Tsusai]
- 10-19-04: Added NPC header modification for OnTouch. Need char move modification. [Tsusai]
- 10-18-04: NPC Set logic fix. [Tsusai]
- 10-18-04: NPC Set can modify STR, AGI, VIT, etc. [Tsusai]
- 10-18-04: Reactivated and fixed NPC set option. [Tsusai]
- 10-18-04: Commented out non working, unused pre variables. [Tsusai]
- 10-17-04: Cleaned up the structure of #warp. [Trihan]
- 10-17-04: Cleaned up the structure of #goto and #summon. [Trihan]
- 10-17-04: Cleaned up the structure of #hstyle and #kill, and other minor fixes. [Trihan]
- 10-17-04: Added 'Tested & Confirmed' 9 character slot support. [AlexKreuz]
- 10-17-04: ISCS: Moved default channel back to #Fusion. [AlexKreuz]
- 10-16-04: REED: Optimized Castle/Parties/Guild Loading. [AlexKreuz]
- 10-16-04: REED: Restructured Castle Saving. [AlexKreuz]
- 10-16-04: ISCS: Provided option to turn off ISCS on startup. [AlexKreuz]
- 10-16-04: REED: Restructured Guild saving (2/2). [AlexKreuz]
- 10-15-04: Cleaned up the structure of #hcolor and #ccolor. [Trihan]
- 10-15-04: Cleaned up the structure of #auto. [Trihan]
- 10-15-04: Cleaned up the structure of #alive and #item. [Trihan]